cambios agregados al sitio web

--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
     <title>Hola Mundo</title>
 </head>
 <body>
-    <p>Hola mundo este es mi sitio web.</p>
+    <p>Hola mundo este es mi sitio web en github.</p>
 </body>
 </html>
