--- a/helloWorld.html
+++ b/helloWorld.html
@@ -7,7 +7,7 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>La página web más cool</h1>
+    <h1>Sitio Web profesional</h1>
     <p>saludos people</p>
     <p>Segundo cambio en wig hub desde el servidor linux</p>
 </body>
